# met

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  Taskfile.yml  environment.yml  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
met/: __init__.py  callbacks.py  compare.py  constants.py  data.py  eval.py  modules.py  train.py  utils.py
met/conf/: comps.yaml  config.yaml
met/conf/callbacks/: default.yaml  encoder.yaml
met/conf/comps/: covtype-alt.yaml  covtype.yaml  income.yaml
met/conf/data/: covtype-alt.yaml  covtype.yaml  income.yaml  met.yaml  mnist.yaml
met/conf/eval/: covtype-alt.yaml  covtype.yaml  income.yaml
met/conf/experiment/: base.yaml  covtype-alt.yaml  covtype.yaml  income.yaml  mnist.yaml
met/conf/model/: base.yaml
met/conf/optimizer/: adam.yaml  rmsprop.yaml  sgd.yaml
met/conf/scheduler/: cyclic.yaml  plateau.yaml
met/conf/trainer/: covtype.yaml  default.yaml  income.yaml
met/models/: base.py  met.py
outputs/: results.json
outputs/MET-16/train/2023-12-06/11-53-13/.hydra/: config.yaml  hydra.yaml
outputs/MET-16/train/2023-12-06/11-53-13/checkpoints/: best_k_models.yaml  epoch=66-step=17085.ckpt
outputs/MET-32/train/2023-12-06/10-54-13/.hydra/: config.yaml  hydra.yaml
outputs/MET-32/train/2023-12-06/10-54-13/checkpoints/: best_k_models.yaml  epoch=50-step=13005.ckpt
outputs/MET-32/train/2023-12-06/14-39-55/.hydra/: config.yaml  hydra.yaml
outputs/MET-32/train/2023-12-06/14-39-55/checkpoints/: best_k_models.yaml  epoch=40-step=10455.ckpt
outputs/MET-32/train/2023-12-07/21-36-28/.hydra/: config.yaml  hydra.yaml
outputs/MET-32/train/2023-12-07/21-36-28/checkpoints/: best_k_models.yaml  epoch=41-step=143010.ckpt
outputs/MET/train/2023-12-03/22-32-53/.hydra/: config.yaml  (+1 more)
outputs/comps/: adult-income.json  cover-type.json
(+34 files in other folders)
